--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        account_id: ["${{ env.WORKLOAD_ACCOUNT_ID_1 }}"]
+        account_id: ["${{ secrets.WORKLOAD_ACCOUNT_ID_1 }}"]
     defaults:
       run:
         working-directory: infra/live/account-baseline
@@ -30,7 +30,7 @@ jobs:
       # Commonly this is a pre-created "bootstrap" role, or you run once manually with admin.
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ env.MANAGEMENT_ACCOUNT_ID }}:role/github-org-bootstrap
+          role-to-assume: arn:aws:iam::${{ secrets.MANAGEMENT_ACCOUNT_ID }}:role/github-org-bootstrap
           aws-region: us-east-1
       
       - run: aws sts assume-role \
@@ -44,6 +44,6 @@ jobs:
           TF_VAR_github_org: YOUR_ORG
           TF_VAR_github_repo: YOUR_REPO
           TF_VAR_branch: main
-          TF_VAR_management_account_id: ${{ env.MANAGEMENT_ACCOUNT_ID }}
-          TF_VAR_audit_account_id: ${{ env.AUDIT_ACCOUNT_ID }}
+          TF_VAR_management_account_id: ${{ secrets.MANAGEMENT_ACCOUNT_ID }}
+          TF_VAR_audit_account_id: ${{ secrets.AUDIT_ACCOUNT_ID }}
           TF_VAR_workload_account_id: ${{ matrix.account_id }}
