--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -12,11 +12,13 @@ permissions:
 
 jobs:
   deploy_workload_baseline:
-    # environment: CloudSec
+    environment: CloudSec
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        account_id: ["${{ vars.WORKLOAD_ACCOUNT_ID_1 }}"]
+        account_id: ${{ fromJSON(vars.WORKLOAD_ACCOUNTS_JSON) }}
+
     defaults:
       run:
         working-directory: infra/live/account-baseline
@@ -27,20 +29,22 @@ jobs:
         with:
           terraform_version: 1.7.5
 
-      # Bootstrap step: you need *some* role to assume initially in the workload account.
-      # Commonly this is a pre-created "bootstrap" role, or you run once manually with admin.
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ vars.MANAGEMENT_ACCOUNT_ID }}:role/github-org-bootstrap
           aws-region: us-east-1
-      
-      - run: aws sts assume-role \
-            --role-arn arn:aws:iam::${{ matrix.account_id }}:role/OrganizationAccountAccessRole \
-            --role-session-name bootstrap-workload-${{ matrix.account_id }}
 
+      # If you're using central tfstate in Audit account, configure backend key per account:
+      - name: Terraform init
+        run: |
+          terraform init \
+            -backend-config="bucket=${{ vars.TF_STATE_BUCKET }}" \
+            -backend-config="dynamodb_table=${{ vars.TF_LOCK_TABLE }}" \
+            -backend-config="region=us-east-1" \
+            -backend-config="key=baseline/${{ matrix.account_id }}.tfstate"
 
-      - run: terraform init
-      - run: terraform apply -auto-approve
+      - name: Terraform apply
+        run: terraform apply -auto-approve
         env:
           TF_VAR_github_org: tosicky
           TF_VAR_github_repo: cloud-security-guardrails
@@ -48,3 +52,4 @@ jobs:
           TF_VAR_management_account_id: ${{ vars.MANAGEMENT_ACCOUNT_ID }}
           TF_VAR_audit_account_id: ${{ vars.AUDIT_ACCOUNT_ID }}
           TF_VAR_workload_account_id: ${{ matrix.account_id }}
+          TF_VAR_region: us-east-1
