--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        account_id: ${{ fromJSON(vars.WORKLOAD_ACCOUNTS_JSON) }}
+        account_id: ${{ fromJSON(vars.WORKLOAD_ACCOUNTS) }}
 
     defaults:
       run:
