update workflow with environments

--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   deploy_workload_baseline:
-    environment: CloudSec
+    # environment: CloudSec
     runs-on: ubuntu-latest
 
     strategy:
