update workflow with environments

--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -28,6 +28,11 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.7.5
+      
+      - name: Show GitHub OIDC token claims
+        run: |
+          echo "ACTIONS_ID_TOKEN_REQUEST_URL=$ACTIONS_ID_TOKEN_REQUEST_URL"
+          echo "ACTIONS_ID_TOKEN_REQUEST_TOKEN is set? $([ -n "$ACTIONS_ID_TOKEN_REQUEST_TOKEN" ] && echo yes || echo no)"
 
       - uses: aws-actions/configure-aws-credentials@v4
         with:
