--- a/.github/workflows/account-baseline.yml
+++ b/.github/workflows/account-baseline.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   deploy_workload_baseline:
-    # environment: CloudSec
+    environment: CloudSec
     runs-on: ubuntu-latest
 
     strategy:
@@ -58,3 +58,4 @@ jobs:
           TF_VAR_audit_account_id: ${{ vars.AUDIT_ACCOUNT_ID }}
           TF_VAR_workload_account_id: ${{ matrix.account_id }}
           TF_VAR_region: us-east-1
+          TF_VAR_environment: CloudSec
