--- a/.github/workflows/workload-deploy.yml
+++ b/.github/workflows/workload-deploy.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        account_id: ["REPLACE_WITH_WORKLOAD_ACCOUNT_ID_1", "REPLACE_WITH_WORKLOAD_ACCOUNT_ID_2"]
+        account_id: ["435976456860"]
     defaults:
       run:
         working-directory: infra/live/workload
